# dnsfun

./: Cargo.toml
src/: handler.rs  main.rs  options.rs
