[package]
name = "dnsfun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.62"
clap = { version = "4.1.1", features = ["derive", "env"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-server = "0.22.0"


[profile.release]
opt-level = "z"
lto = "thin"
debug = false
strip = true